syntax = "proto3";
option java_multiple_files = true;
package networking.customer;

import "Proto/Address.proto";
import "Proto/User.proto";

message CustomerMessage {
    user.UserMessage user_message = 1;
    string first_name = 2;
    string last_name = 3;
    string phone_number = 4;
    address.AddressMessage address = 5;
}

message CustomersMessage {
    repeated CustomerMessage customers = 1;
}

service CustomerService {
    rpc createCustomer(CustomerMessage) returns (user.UserMessage);
    rpc getAllCustomers(user.UserMessage) returns (CustomersMessage);
    rpc deleteCustomer(user.UserMessage) returns (CustomerMessage);
    rpc getCustomerById(user.UserMessage)returns (CustomerMessage);
    rpc editCustomer(CustomerMessage) returns (CustomerMessage);
    rpc FindCustomerByName(user.UserMessage) returns (CustomersMessage);
}