syntax="proto3";
option java_multiple_files = true;
package networking.provider;

import "Address.proto";
import "User.proto";

message ProviderMessage{
  user.UserMessage user = 1;
  string company_name = 2;
  int32 cvr = 3;
  string phone_number = 4;
  string description = 5;
  bool is_approved = 6;
  address.AddressMessage address = 7;
}

message ProvidersMessage {
  repeated ProviderMessage providers = 1;
}

service ProviderService{
  rpc CreateProvider(ProviderMessage) returns (user.UserMessage);
  rpc GetAllProviders(ProviderMessage) returns (ProvidersMessage);
  rpc GetProviderById(user.UserMessage) returns (ProviderMessage);
  rpc EditProvider(ProviderMessage) returns (ProviderMessage);
  rpc RemoveProvider(user.UserMessage) returns (ProviderMessage);
  rpc GetAllNotApprovedProviders(ProviderMessage) returns (ProvidersMessage);
  rpc GetAllByName(user.UserMessage) returns (ProvidersMessage);
}